src/adapters/reporters/snapshots/crap4rs__adapters__reporters__markdown__tests__full_markdown_breakdown_snapshot.snap
---
source: src/adapters/reporters/markdown.rs
expression: out
---
# crap4rs v0.4.0 — CRAP Score Analysis

## Summary

**Result:** FAIL · **Functions:** 3 · **Above threshold (8):** 2

| Metric     | Worst | Average | Median |
|------------|------:|--------:|-------:|
| CRAP       | 45.20 |   21.07 |  15.00 |
| Complexity |    20 |     9.3 |    6.0 |
| Coverage   | 30.0% |   65.8% |  72.5% |

**Risk distribution:** low 1 · acceptable 0 · moderate 1 · high 1

## Failures (top 1 of 2 above threshold 8)

| File | Function | CC | Cov% | CRAP | Risk |
|------|----------|----|------|------|------|
| src/lib.rs | risky_fn | 5 | 30.0 | 45.00 | high |
  - L5 if-branch +1
  - L10 for-loop +2

_Legend: +1 = base structural increment. +N (nested) = +1 base plus +(N-1) from active nesting depth (if/else, match arms, while/for/loop, let-else diverging branches, closures)._
