src/adapters/reporters/snapshots/crap4rs__adapters__reporters__markdown__tests__full_markdown_snapshot.snap
---
source: src/adapters/reporters/markdown.rs
expression: out
---
# crap4rs v0.2.1 — CRAP Score Analysis

| File | Function | CC | Cov% | CRAP | Risk |
|------|----------|----|------|------|------|
| src/domain/crap.rs | complex_fn | 20 | 30.0 | 45.20 | high |
| src/adapters/coverage/mod.rs | parse_record | 6 | 72.5 | 15.00 | moderate |
| src/lib.rs | simple_fn | 2 | 95.0 | 3.00 | low |

## Summary

- **Result:** FAIL
- **Functions:** 3 (2 above threshold 8)
- **Worst CRAP:** 45.2
- **Average CRAP:** 21.1
- **Median CRAP:** 15.0
- **Distribution:** low 1 · acceptable 0 · moderate 1 · high 1
