src/adapters/reporters/snapshots/crap4rs__adapters__reporters__markdown__tests__full_markdown_with_delta_snapshot.snap
---
source: src/adapters/reporters/markdown.rs
expression: out
---
# crap4rs v0.2.2 — CRAP Score Analysis

## Summary

**Result:** FAIL · **Functions:** 3 · **Above threshold (8):** 2

| Metric     | Worst | Average | Median |
|------------|------:|--------:|-------:|
| CRAP       | 30.00 |   18.33 |  22.00 |
| Complexity |     0 |     0.0 |    0.0 |
| Coverage   |  0.0% |    0.0% |   0.0% |

**Risk distribution:** low 1 · acceptable 0 · moderate 0 · high 2

## Failures (2 above threshold 8)

| File | Function | CC | Cov% | CRAP | Risk |
|------|----------|----|------|------|------|
| src/adapters/baseline.rs | new_fn | 10 | 40.0 | 30.00 | high |
| src/adapters/coverage/mod.rs | parse_record | 6 | 60.0 | 22.00 | high |

## CRAP Scorecard

- **Delta status:** FAIL
- **Changes:** +1 added, 1 removed, 2 modified
- **Regressions:** 1 · **Improvements:** 0 · **New violations:** 1

### Regressions

| File | Function | Baseline CRAP | Current CRAP | Δ |
|------|----------|--------------:|-------------:|--:|
| src/adapters/coverage/mod.rs | parse_record | 15.00 | 22.00 | +7.00 |

### New violations

| File | Function | Current CRAP |
|------|----------|-------------:|
| src/adapters/baseline.rs | new_fn | 30.00 |
